--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "firebase": "^12.4.0",
-    "firebase-admin": "^11.11.1",
+    "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0"
   }
